<resources>
    <string name="app_name">musician_00</string>
    <string name="button_addClip">Add Clip</string>
    <string name="button_saveClip">Save Clip</string>
    <string name="hint_clipTitle">Clip Title</string>
    <string name="hint_clipDescription">Clip Description</string>
    <string name="hint_clipInstrument">If \'Other\', please specify</string>
    <string name="hint_clipGenres">Clip Genres</string>
    <string name="menu_addClip">Add</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_cancel">Cancel</string>
    <string name="button_addImage">Add Image</string>
    <string name="button_addAudio">Add Audio</string>
    <string name="button_changeImage">Change Image</string>
    <string name="button_changeAudio">Change Audio</string>
    <string name="select_clip_image">Select Clip image</string>
    <string name="select_clip_audio">Select Clip audio</string>
    <string name="button_location">Set Location</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="button_update_profile">Save Changes</string>
    <string name="button_delete_clips">Delete All Clips</string>
    <string name="button_delete_account">Delete Account</string>
    <!-- Strings used for fragments for navigation -->
    <string name="title_activity_user_maps">Map of All Users</string>

</resources>